(Format: Year/Month/Day)
Changes for 0.9.16:
*06/04/11:
   * Fix calculation of prevWorkspace (Mathias)
     Screen.cc
   * Cosmetic, close #1467926 (thanx Jonas Koelker)
     Keys.hh/cc
*06/04/09:
   * Fix label background update with external tabs (Simon)
     FbWinFrame.cc
*06/04/06:
   * Fix build on amd64 - some more size_t propagation and includes 
    (Simon)
    FbTk/... Text.hh/cc Font.cc
*06/04/05:
   * Fix gcc 2.95.4 build error in ScreenPlacement.hh (Simon)
     ScreenPlacement.hh
   * Fix tabs on other workspaces being shown on placement change (Simon)
     + Fix XmbFonts for multiple screens. Still need to fix XFontImp, 
       it's quite a bit more convoluted.
     FbWinFrame.cc FbTk/XmbFontImp.cc
*06/04/04:
   * Rotated Xmb Fonts (Simon)
     - rotated when drawn. Probably not very efficient for 
       parentrelative backgrounds. If it proves an issue, we should 
       probably cache recently-drawn strings so we can just re-stipple.
     XmbFontImp.hh/cc Text.hh
   * Rotated X Fonts again, plus minor external tab alignment fixes (Simon)
     - Still need to do XmbFonts. Most people probably load those 
       instead of XFont these days. Will need yet another approach...
     FbTk/XFontImp.hh/cc FbTk/Text.hh FbWinFrame.cc Container.cc 
*06/04/02:
   * size_t fixes. (Thanks Semushin Slava aka php-coder)
*06/03/27:
   * Fix crash when deiconifying stuck windows with Follow mode (Simon)
     IconButton.cc
   * Don't Follow stuck windows on deiconify, since they're stuck 
     (thanks _markt)
     IconButton.cc
*06/03/26:
   * Related to external (Simon)
     - Fix title alignment
     - Fix "jumpy" vertical tabs on tab size change & other change-related
     - Fix alignment error for left-hand vertical tabs
     FbWinFrame.cc Container.cc
   * More external tabs work AND rotated Xft text (Simon)
     - new tab positions (LeftTop, LeftBottom, etc)
     - TextButtons and Containers can have orientation set on them