@@ -1,6 +1,8 @@
 (Format: Year/Month/Day)
 Changes for 0.9.16:
 *06/04/11:
+   * Ensure applying of size hints while maximizing (Mathias)
+     Window.cc
    * Fix calculation of prevWorkspace (Mathias)
      Screen.cc
    * Cosmetic, close #1467926 (thanx Jonas Koelker)
